# Parallel_Computing_Project_2024

./: .gitignore  16_2^20.txt  Report.md  Report_tmp.html  common.h  input.cpp  main.cpp  p16-a_2^20.cali  sortVerify.cpp
MPI_Builds/: CMakeLists.txt  Makefile  build.sh  mpi.grace_job  project_analysis.ipynb  submit_jobs.py
MPI_Builds/cali_files/: p128-a_2^16-perturbed-bitonicSort.cali  p128-a_2^16-random-bitonicSort.cali  p128-a_2^16-reverseSorted-bitonicSort.cali  p128-a_2^16-sorted-bitonicSort.cali  p128-a_2^18-perturbed-bitonicSort.cali  p128-a_2^18-random-bitonicSort.cali  p128-a_2^18-reverseSorted-bitonicSort.cali  p128-a_2^18-sorted-bitonicSort.cali  p128-a_2^20-perturbed-bitonicSort.cali  p128-a_2^20-random-bitonicSort.cali  p128-a_2^20-reverseSorted-bitonicSort.cali  p128-a_2^20-sorted-bitonicSort.cali  p128-a_2^22-perturbed-bitonicSort.cali  p128-a_2^22-random-bitonicSort.cali  p128-a_2^22-reverseSorted-bitonicSort.cali  p128-a_2^22-sorted-bitonicSort.cali  p128-a_2^24-perturbed-bitonicSort.cali  p128-a_2^24-random-bitonicSort.cali  p128-a_2^24-reverseSorted-bitonicSort.cali  p128-a_2^24-sorted-bitonicSort.cali  p128-a_2^26-perturbed-bitonicSort.cali  p128-a_2^26-random-bitonicSort.cali  p128-a_2^26-reverseSorted-bitonicSort.cali  p128-a_2^26-sorted-bitonicSort.cali  p128-a_2^28-perturbed-bitonicSort.cali  p128-a_2^28-random-bitonicSort.cali  p128-a_2^28-reverseSorted-bitonicSort.cali  p128-a_2^28-sorted-bitonicSort.cali  p16-a_2^16-perturbed-bitonicSort.cali  p16-a_2^16-random-bitonicSort.cali  p16-a_2^16-reverseSorted-bitonicSort.cali  (+221 more)
common/: common.h  (+2 more)
(+1014 files in other folders)
